--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ p.underline {
   font-family: Segoe;
   font-size: 25px;
   line-height: normal;
-  min-height: 45px;
+  min-height: 40px;
   min-width: 0;
   outline: none;
   padding: 0px 0px;
@@ -274,11 +274,11 @@ p.underline {
   line-height: normal;
   min-width: 0;
   outline: none;
-  padding: 5px 15px;
+  padding: 2.5px 15px;
   text-align: center;
   text-decoration: none;
   user-select: none;
-  width: 300px;
+  width: 320px;
   will-change: transform;
   background-color: rgb(245, 243, 237);
   transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
@@ -1819,4 +1819,14 @@ hr {
   margin-bottom: 2%;
   margin-top: 6%;
   margin-left: 5%;
+}
+#flower-frame {
+  box-sizing: border-box;
+  transition: transform 0.2s;
+}
+.flower-frame:hover {
+  -ms-transform: scale(1.5); /* IE 9 */
+  -webkit-transform: scale(1.5); /* Safari 3-8 */
+  transform: scale(1.5);
+  z-index: 100;
 }
