--- a/styleForPresets.css
+++ b/styleForPresets.css
@@ -90,9 +90,13 @@ h5 {
 
 /*preset preview End*/
 /* NAVIGATION BUTTONS*/
-.navigationButtonsDesktop,
-.navigationButtonsMobile,
-.navigationButtonsDesktopFix {
+.navigationButtonsDesktop {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 6%;
+  margin-left: 6%;
+}
+.navigationButtonsMobile {
   display: flex;
   justify-content: space-around;
 }
@@ -165,7 +169,7 @@ a:active {
     visibility: hidden;
   }
   .btn1-light {
-    max-width: 250px;
+    width: 370px;
     max-height: 60px;
   }
 } /*  hiding DEsktop elements for  phone version*/
@@ -227,6 +231,7 @@ input::placeholder {
 .contactButton {
   margin: 4%;
   padding: 2%;
+  width: 60%;
 }
 
 /* STYLE FOR CONTACT PAGE Desktop HERE*/
@@ -262,10 +267,7 @@ h6 {
 .availableFlowers {
   max-width: 300px;
 }
-.navigationButtonsDesktopFix {
-  margin-top: -3%;
-  margin-bottom: 8%;
-}
+
 .navigationButtonsDesktopContact {
   margin-top: 20%;
 }
@@ -283,9 +285,7 @@ h6 {
 @media screen and (max-width: 768px) {
   .gridPresetPreviewDesktop,
   .contactDesktopHeadingsGrid,
-  .contactDesktopGrid,
-  .navigationButtonsDesktopFix,
-  h6 {
+  .contactDesktopGrid h6 {
     display: none;
   }
 }
@@ -318,6 +318,9 @@ h6 {
 }
 .errorPictureMobile {
   width: 90%;
+}
+.buttonWidthFix {
+  width: 310px;
 }
 /* hiding mobile elements for Making desktop ver for 404 */
 @media screen and (min-width: 769px) {
