--- a/style.css
+++ b/style.css
@@ -1179,9 +1179,28 @@ p.underline {
     transition: background-color 0.6s ease;
     cursor: pointer;
   }
+  .slider-cellActive {
+    position: relative;
+    width: 90px;
+    height: 8px;
+    border-radius: 10px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: white;
+    margin: 10px;
+    transition: background-color 0.6s ease;
+    cursor: pointer;
+  }
+
+  .white-cell {
+    border-color: #5a5a5a;
+  }
+  .white-cell:hover {
+    background-color: #5a5a5a;
+  }
   .active,
   .slider-cell:hover {
-    background-color: #717171;
+    background-color: white;
   }
 
   /* Fading animation */
@@ -1553,12 +1572,6 @@ p.underline {
     margin-top: -40px;
     display: flex;
     justify-content: center;
-  }
-  .white-cell {
-    border-color: white;
-  }
-  .white-cell:hover {
-    background-color: white;
   }
 }
 /*preset preview End*/
